force-app/main/default/objects/OrderRequestLineItem__c/OrderRequestLineItem__c.object-meta.xml
<CustomObject>
    <description>Stores individual product line items within an Order Request. Each line item represents one product, its quantity, price and container deposit information.</description>
    <label>Order Request Line Item</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>