force-app/main/default/objects/OrderRequestLineItem__c/fields/Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price__c</fullName>
    <description>Customer price for this product at the time of the order request. Populated from Product2.Customer_Price__c when the order is created.</description>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>