force-app/main/default/objects/OrderRequestLineItem__c/fields/Deposit_Container__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Container__c</fullName>
    <label>Deposit Container</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a container deposit is included in this line item. Part of Alma&apos;s container return program — customers who return empty containers receive a discount on their next order.</description>
</CustomField>