force-app/main/default/objects/OrderRequestLineItem__c/fields/Deposit_Price__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Price__c</fullName>
    <description>Container deposit price copied from the selected product when the line item is saved. Locked at the time of the order.</description>
    <label>Deposit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>