force-app/main/default/objects/OrderRequestLineItem__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>Total amount for this line item: quantity × customer price. Deposit price is added when the customer does not return the container.</description>
    <formula>IF(Deposit_Container__c, Quantity__c * Customer_Price__c, Quantity__c * Customer_Price__c + Deposit_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>