force-app/main/default/objects/OrderRequestLineItem__c/fields/OrderRequest__c.field-meta.xml
<CustomField>
    <fullName>OrderRequest__c</fullName>
    <label>Order Request</label>
    <type>MasterDetail</type>
    <referenceTo>OrderRequest__c</referenceTo>
    <relationshipName>Order_Request_Line_Items</relationshipName>
    <relationshipLabel>Order Request Line Items</relationshipLabel>
    <description>Parent order this line item belongs to. Deleting the order deletes all its line items.</description>
</CustomField>