force-app/main/default/objects/OrderRequestLineItem__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <label>Photo</label>
    <type>Url</type>
    <description>Link to the product photo for this order line item — stored in Google Drive or similar external storage.</description>
</CustomField>