force-app/main/default/objects/OrderRequestLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product from the Alma catalog included in this order line item.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Request Line Items</relationshipLabel>
    <relationshipName>Order_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>