force-app/main/default/objects/OrderRequestLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <required>true</required>
    <precision>18</precision>
    <scale>0</scale>
    <description>Number of units ordered for this product line item.</description>
</CustomField>