force-app/main/default/objects/OrderRequestLineItem__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <description>Stock available for the selected product, sourced from the Product's Stock field.</description>
    <formula>Product__r.Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>