force-app/main/default/objects/OrderRequestLineItem__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <description>Ensures that a Product is always selected on every Order Request Line Item.</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorMessage>Product is required. Please select a product for this line item.</errorMessage>
</ValidationRule>