force-app/main/default/objects/OrderRequestLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrderRequest__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Deposit_Container__c</columns>
    <columns>Deposit_Price__c</columns>
    <columns>Line_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Order Request Line Items</label>
</ListView>